# infinite-chat

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  TODO2.md  dev.html  gallery.html  index.html
crates/components/: Cargo.toml  README.md
crates/components/examples/: render_part_dump.rs
crates/components/src/: codeblock.rs  highlight.rs  lib.rs  partrender.rs  partspecific.rs
crates/components/src/snapshots/: infinite_chat_components__partspecific__tests__compaction.snap  infinite_chat_components__partspecific__tests__reasoning.snap  infinite_chat_components__partspecific__tests__tool_edit_diff.snap  infinite_chat_components__partspecific__tests__tool_running.snap  infinite_chat_components__partspecific__tests__tool_todo_list.snap  infinite_chat_components__partspecific__tests__tool_todo_running.snap
crates/core/: Cargo.toml  README.md
crates/core/src/: app.rs  boxlayout.rs  camera.rs  celllayout.rs  cellwidth.rs  codeblock.rs  content.rs  embed.rs  formation.rs  frame.rs  highlight.rs  lib.rs  math.rs  motion.rs  nodes.rs  partrender.rs  partspecific.rs  protocol.rs  reveal.rs  rhythm.rs  seam.rs  shaderbox.rs  smoother.rs  spatial.rs  store.rs  support.rs  svg.rs  theme.rs  tilelayout.rs  urlpolicy.rs
crates/core/src/snapshots/: infinite_chat_core__math__tests__math_positioning.snap  infinite_chat_core__partspecific__tests__diff_hunks_mixed.snap  infinite_chat_core__partspecific__tests__tool_bash_done.snap  infinite_chat_core__svg__tests__svg_whitelist_parse.snap  (+1 more)
crates/core/tests/: real_server_replay.rs  replay.rs  replay_snapshot.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: decoration.rs  effects.rs  frame.rs  lib.rs  motion.rs  shaderbox.rs  style.rs  text.rs  theme.rs  tile.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: atlas.rs  backend.rs  effects.rs  lib.rs  morph.rs  scene.rs
(+368 files in other folders)
