[package]
name = "infinite-chat-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
infinite-chat-core = { path = "../core" }
wgpu.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
naga = { version = "25", features = ["wgsl-in"] }

[lints]
workspace = true
